[package]
name = "libp2p-kad"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
arrayvec = "0.4.7"
bs58 = "0.2.0"
bigint = "4.2"
bytes = "0.4"
datastore = { path = "../datastore" }
fnv = "1.0"
futures = "0.1"
libp2p-identify = { path = "../identify" }
libp2p-ping = { path = "../ping" }
libp2p-core = { path = "../core" }
log = "0.4"
multiaddr = { path = "../multiaddr" }
parking_lot = "0.5.1"
protobuf = "1"
rand = "0.4.2"
smallvec = "0.5"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-timer = "0.1.2"
varint = { path = "../varint-rs" }

[dev-dependencies]
libp2p-tcp-transport = { path = "../tcp-transport" }
rand = "0.4.2"
tokio-core = "0.1"
