[package]
name = "libp2p-swarm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bytes = "0.4"
multiaddr = "0.2.0"
multistream-select = { path = "../multistream-select" }
futures = "0.1"
smallvec = "0.5"
tokio-io = "0.1"

[dev-dependencies]
libp2p-ping = { path = "../libp2p-ping" }
libp2p-tcp-transport = { path = "../libp2p-tcp-transport" }
tokio-core = "0.1"
