[package]
name = "libp2p-mplex-yamux"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
libp2p-core = { path = "../core" }
log = "0.4"
parking_lot = "0.5"
tokio-executor = "0.1"
tokio-io = "0.1"
yamux = { git = "https://github.com/paritytech/yamux" }
