[package]
name = "multiplex"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bytes = "0.4.5"
num-traits = "0.1.40"
num-bigint = "0.1.40"
tokio-io = "0.1"
futures = "0.1"
parking_lot = "0.4.8"
arrayvec = "0.4.6"
rand = "0.3.17"
libp2p-swarm = { path = "../swarm" }
varint = { path = "../varint-rs" }
error-chain = "0.11.0"
futures-mutex = { git = "https://github.com/paritytech/futures-mutex" }

[dev-dependencies]
libp2p-tcp-transport = { path = "../tcp-transport" }
tokio-core = "0.1"
