[package]
name = "libp2p-peerstore"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bs58 = "0.2.0"
datastore = { path = "../datastore" }
futures = "0.1.0"
owning_ref = "0.3.3"
libp2p-core = { path = "../core" }
multiaddr = "0.3"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
multihash = "0.7.0"
tempfile = "2.2"
serde_json = "1.0"
