[package]
name = "libp2p-ping"
version = "0.1.0"
authors = ["pierre <pierre.krieger1708@gmail.com>"]

[dependencies]
bytes = "0.4"
libp2p-swarm = { path = "../swarm" }
log = "0.4.1"
multiaddr = "0.3.0"
multistream-select = { path = "../multistream-select" }
futures = "0.1"
parking_lot = "0.5"
rand = "0.3"
tokio-io = "0.1"

[dev-dependencies]
libp2p-tcp-transport = { path = "../tcp-transport" }
tokio-core = "0.1"
