[package]
name = "libp2p-ping"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"

[dependencies]
bytes = "0.4"
libp2p-core = { path = "../core" }
log = "0.4.1"
multiaddr = { path = "../multiaddr" }
multistream-select = { path = "../multistream-select" }
futures = "0.1"
parking_lot = "0.5"
rand = "0.5"
tokio-codec = "0.1"
tokio-io = "0.1"

[dev-dependencies]
libp2p-tcp-transport = { path = "../tcp-transport" }
tokio-current-thread = "0.1"
tokio-tcp = "0.1"
