[package]
name = "libp2p-relay"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
libp2p-peerstore = { path = "../peerstore" }
libp2p-core = { path = "../core" }
log = "0.4"
multiaddr = "0.3.0"
protobuf = "2"
rand = "0.4"
tokio-io = "0.1"
varint = { path = "../varint-rs" }
